manifests/prometheus/prometheus-k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  labels:
    prometheus: k8s
  name: prometheus-k8s
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30900
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: k8s
