manifests/prometheus/prometheus-k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus.internal.jesses.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: web
